--- a/lib/rambnb_web/components/layouts/root.html.heex
+++ b/lib/rambnb_web/components/layouts/root.html.heex
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="csrf-token" content={get_csrf_token()} />
-    <.live_title default="Rambnb" suffix=" · Phoenix Framework">
-      {assigns[:page_title]}
+    <.live_title suffix=" · RamBnB">
+      <%= assigns[:page_title] || "Rent RAM by the Day" %>
     </.live_title>
+    <link rel="icon" type="image/svg+xml" href={~p"/favicon.ico"} />
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
