--- a/lib/rambnb_web/controllers/booking_html/booking_form.html.heex
+++ b/lib/rambnb_web/controllers/booking_html/booking_form.html.heex
@@ -9,6 +9,7 @@
   <.input field={f[:guest_email]} type="text" label="Guest email" />
   <.input field={f[:total_price]} type="number" label="Total price" step="any" />
   <.input field={f[:status]} type="text" label="Status" />
+  <.input field={f[:listing_id]} type="number" label="Listing" />
   <:actions>
     <.button>Save Booking</.button>
   </:actions>
