--- a/lib/rambnb_web/controllers/booking_html/edit.html.heex
+++ b/lib/rambnb_web/controllers/booking_html/edit.html.heex
@@ -1,5 +1,5 @@
 <.header>
-  Edit Booking {@booking.id}
+  Edit Booking {@booking.public_id}
   <:subtitle>Use this form to manage booking records in your database.</:subtitle>
 </.header>
 
