avoid creating duplicates with seeds

--- a/lib/rambnb_web/components/layouts/root.html.heex
+++ b/lib/rambnb_web/components/layouts/root.html.heex
@@ -14,5 +14,7 @@
   </head>
   <body class="bg-white">
     {@inner_content}
+
+    <script defer src="https://umami.olivierroy.dev/script.js" data-website-id="ace848b9-3839-4324-bea0-5b8783c5308b"></script>
   </body>
 </html>
